force-app/main/default/objects/Turn__c/Turn__c.object-meta.xml
<CustomObject>
    <label>Turn</label>
    <nameField>
        <displayFormat>TURN - {0000000}</displayFormat>
        <label>Turn Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Turns</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>