force-app/main/default/objects/Turn__c/fields/Acquisition_Source__c.field-meta.xml
<CustomField>
    <fullName>Acquisition_Source__c</fullName>
    <formula>IF(Text(Property_ID__r.Property_Acq_Source__c) = &quot;REO&quot;, &quot;REO&quot;,
IF(Text(Property_ID__r.Property_Acq_Source__c) = &quot;SFR&quot;,&quot;SFR&quot;,
			IF(Text(Property_ID__r.Property_Acq_Source__c) = &quot;RTM - Tiber&quot;,&quot;RTM - Tiber&quot;,
IF(Text(Property_ID__r.Property_Acq_Source__c) = Null, &quot;SFR&quot;,NULL))))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Acquisition Type</label>
    <type>Text</type>
</CustomField>