force-app/main/default/objects/Turn__c/fields/Actual_Bid_Complete_Date__c.field-meta.xml
<CustomField>
    <fullName>Actual_Bid_Complete_Date__c</fullName>
    <label>Actual Bid Complete Date</label>
    <type>Date</type>
</CustomField>