force-app/main/default/objects/Turn__c/fields/Actual_Bid_Submit_Date__c.field-meta.xml
<CustomField>
    <fullName>Actual_Bid_Submit_Date__c</fullName>
    <label>Turn Bid Submit by GC Date</label>
    <type>Date</type>
</CustomField>