force-app/main/default/objects/Turn__c/fields/Actual_Move_Out_Date__c.field-meta.xml
<CustomField>
    <fullName>Actual_Move_Out_Date__c</fullName>
    <label>Actual Move Out Date</label>
    <type>Date</type>
</CustomField>