force-app/main/default/objects/Turn__c/fields/Actual_Punchlist_Complete_Date__c.field-meta.xml
<CustomField>
    <fullName>Actual_Punchlist_Complete_Date__c</fullName>
    <label>Actual Punchlist Complete Date</label>
    <type>Date</type>
</CustomField>