force-app/main/default/objects/Turn__c/fields/Actual_Reimbursement_from_Ins_from_SOL__c.field-meta.xml
<CustomField>
    <fullName>Actual_Reimbursement_from_Ins_from_SOL__c</fullName>
    <label>Actual Reimbursement from Ins from SOL</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>