force-app/main/default/objects/Turn__c/fields/Actual_Remediation__c.field-meta.xml
<CustomField>
    <fullName>Actual_Remediation__c</fullName>
    <label>Actual Remediation</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>