force-app/main/default/objects/Turn__c/fields/Actual_Turn_Complete_Date__c.field-meta.xml
<CustomField>
    <fullName>Actual_Turn_Complete_Date__c</fullName>
    <label>Actual Turn Complete Date</label>
    <type>Date</type>
</CustomField>