force-app/main/default/objects/Turn__c/fields/Age_of_Property__c.field-meta.xml
<CustomField>
    <fullName>Age_of_Property__c</fullName>
    <formula>YEAR(TODAY()) - VALUE(Year_Built__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Age of Property</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>