force-app/main/default/objects/Turn__c/fields/Aggregate_Claim__c.field-meta.xml
<CustomField>
    <fullName>Aggregate_Claim__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Aggregate Claim</label>
    <type>Checkbox</type>
</CustomField>