force-app/main/default/objects/Turn__c/fields/Amenity_Key_Location__c.field-meta.xml
<CustomField>
    <fullName>Amenity_Key_Location__c</fullName>
    <label>Amenity Key Location</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>In kitchen</fullName>
            </value>
            <value>
                <fullName>HOA</fullName>
            </value>
            <value>
                <fullName>other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>