force-app/main/default/objects/Turn__c/fields/Amenity_Key_Required__c.field-meta.xml
<CustomField>
    <fullName>Amenity_Key_Required__c</fullName>
    <label>Amenity Key Required</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>