force-app/main/default/objects/Turn__c/fields/Amenity_Type__c.field-meta.xml
<CustomField>
    <fullName>Amenity_Type__c</fullName>
    <label>Amenity Type</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pool</fullName>
            </value>
            <value>
                <fullName>Clubhouse</fullName>
            </value>
            <value>
                <fullName>Fitness</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>