force-app/main/default/objects/Turn__c/fields/Amount_Submitted_GC__c.field-meta.xml
<CustomField>
    <fullName>Amount_Submitted_GC__c</fullName>
    <label>Amount Submitted - GC</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>