force-app/main/default/objects/Turn__c/fields/Approved_Warranty_Change_Order_Amount__c.field-meta.xml
<CustomField>
    <fullName>Approved_Warranty_Change_Order_Amount__c</fullName>
    <label>Approved Warranty Change Order Amount</label>
    <precision>9</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>