force-app/main/default/objects/Turn__c/fields/Baths__c.field-meta.xml
<CustomField>
    <fullName>Baths__c</fullName>
    <formula>Property_ID__r.Baths__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Baths</label>
    <precision>18</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>