force-app/main/default/objects/Turn__c/fields/Bed__c.field-meta.xml
<CustomField>
    <fullName>Bed__c</fullName>
    <formula>Property_ID__r.Bed__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Bed</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>