force-app/main/default/objects/Turn__c/fields/Bid_Review_Variance_Percent__c.field-meta.xml
<CustomField>
    <fullName>Bid_Review_Variance_Percent__c</fullName>
    <formula>( Turn_Recommendation__c -  Amount_Submitted_GC__c )/ Turn_Recommendation__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Bid Review Variance %</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>