force-app/main/default/objects/Turn__c/fields/Business_Interruption__c.field-meta.xml
<CustomField>
    <fullName>Business_Interruption__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Business Interruption</label>
    <type>Checkbox</type>
</CustomField>