force-app/main/default/objects/Turn__c/fields/Busy_Street__c.field-meta.xml
<CustomField>
    <fullName>Busy_Street__c</fullName>
    <formula>Property_ID__r.Busy_Street__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Busy Street</label>
    <type>Checkbox</type>
</CustomField>