force-app/main/default/objects/Turn__c/fields/Change_Order_1_Percentage__c.field-meta.xml
<CustomField>
    <fullName>Change_Order_1_Percentage__c</fullName>
    <label>Change Order 1 %</label>
    <precision>6</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>