force-app/main/default/objects/Turn__c/fields/Change_Order_2_Initiated__c.field-meta.xml
<CustomField>
    <fullName>Change_Order_2_Initiated__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Change Order 2 Initiated</label>
    <type>Checkbox</type>
</CustomField>