force-app/main/default/objects/Turn__c/fields/Change_Order_Initiated__c.field-meta.xml
<CustomField>
    <fullName>Change_Order_Initiated__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Change Order Initiated</label>
    <type>Checkbox</type>
</CustomField>