force-app/main/default/objects/Turn__c/fields/CO2_Submission_Complete__c.field-meta.xml
<CustomField>
    <fullName>CO2_Submission_Complete__c</fullName>
    <defaultValue>false</defaultValue>
    <label>CO2 Submission Complete</label>
    <type>Checkbox</type>
</CustomField>