force-app/main/default/objects/Turn__c/fields/CO3_Submitted_for_Approval__c.field-meta.xml
<CustomField>
    <fullName>CO3_Submitted_for_Approval__c</fullName>
    <defaultValue>false</defaultValue>
    <label>CO3 Submitted for Approval</label>
    <type>Checkbox</type>
</CustomField>