force-app/main/default/objects/Turn__c/fields/CO4_Submitted_for_Approval__c.field-meta.xml
<CustomField>
    <fullName>CO4_Submitted_for_Approval__c</fullName>
    <defaultValue>false</defaultValue>
    <label>CO4 Submitted for Approval</label>
    <type>Checkbox</type>
</CustomField>