force-app/main/default/objects/Turn__c/fields/Contractor_Turn_Complete_Date__c.field-meta.xml
<CustomField>
    <fullName>Contractor_Turn_Complete_Date__c</fullName>
    <label>Contractor Turn Complete Date</label>
    <type>Date</type>
</CustomField>