force-app/main/default/objects/Turn__c/fields/Create_Change_Order_Form__c.field-meta.xml
<CustomField>
    <fullName>Create_Change_Order_Form__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Create Change Order Form</label>
    <type>Checkbox</type>
</CustomField>