force-app/main/default/objects/Turn__c/fields/Create_CO_3_Form__c.field-meta.xml
<CustomField>
    <fullName>Create_CO_3_Form__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Create CO 3 Form</label>
    <type>Checkbox</type>
</CustomField>