force-app/main/default/objects/Turn__c/fields/Create_Reviewer_Form__c.field-meta.xml
<CustomField>
    <fullName>Create_Reviewer_Form__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Create Reviewer Form</label>
    <type>Checkbox</type>
</CustomField>