force-app/main/default/objects/Turn__c/fields/Create_Work_Authorization_Form__c.field-meta.xml
<CustomField>
    <fullName>Create_Work_Authorization_Form__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Create Work Authorization Form</label>
    <type>Checkbox</type>
</CustomField>