force-app/main/default/objects/Turn__c/fields/Date_Time_Sent_to_Marketing__c.field-meta.xml
<CustomField>
    <fullName>Date_Time_Sent_to_Marketing__c</fullName>
    <label>Date/Time Sent to Marketing</label>
    <type>DateTime</type>
</CustomField>