force-app/main/default/objects/Turn__c/fields/Date_Unit_Down__c.field-meta.xml
<CustomField>
    <fullName>Date_Unit_Down__c</fullName>
    <label>Date Unit Down</label>
    <type>Date</type>
</CustomField>