force-app/main/default/objects/Turn__c/fields/Date_Unit_Remediated_Not_Down__c.field-meta.xml
<CustomField>
    <fullName>Date_Unit_Remediated_Not_Down__c</fullName>
    <label>Date Unit Remediated/Not Down</label>
    <type>Date</type>
</CustomField>