force-app/main/default/objects/Turn__c/fields/Days_from_Ordered_to_Turn_Complete__c.field-meta.xml
<CustomField>
    <fullName>Days_from_Ordered_to_Turn_Complete__c</fullName>
    <formula>Actual_Turn_Complete_Date__c - Actual_Move_Out_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Days from Ordered to Turn Complete</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>