force-app/main/default/objects/Turn__c/fields/Deed_Posted_to_Sharepoint__c.field-meta.xml
<CustomField>
    <fullName>Deed_Posted_to_Sharepoint__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Deed: Posted to Sharepoint</label>
    <type>Checkbox</type>
</CustomField>