force-app/main/default/objects/Turn__c/fields/doCreateVF__c.field-meta.xml
<CustomField>
    <fullName>doCreateVF__c</fullName>
    <defaultValue>false</defaultValue>
    <label>doCreateVF</label>
    <type>Checkbox</type>
</CustomField>