force-app/main/default/objects/Turn__c/fields/Down_Unit__c.field-meta.xml
<CustomField>
    <fullName>Down_Unit__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Down Unit</label>
    <type>Checkbox</type>
</CustomField>