force-app/main/default/objects/Turn__c/fields/Down_Unit_Notes__c.field-meta.xml
<CustomField>
    <fullName>Down_Unit_Notes__c</fullName>
    <label>Down Unit Notes</label>
    <type>TextArea</type>
</CustomField>