force-app/main/default/objects/Turn__c/fields/Down_Unit_Reason__c.field-meta.xml
<CustomField>
    <fullName>Down_Unit_Reason__c</fullName>
    <label>Down Unit Reason</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Insurance Claim</fullName>
            </value>
            <value>
                <fullName>Vandalism</fullName>
            </value>
            <value>
                <fullName>Squatter</fullName>
            </value>
            <value>
                <fullName>Violation</fullName>
            </value>
            <value>
                <fullName>Legal Hold</fullName>
            </value>
            <value>
                <fullName>Freeze Damage</fullName>
            </value>
            <value>
                <fullName>Mold</fullName>
            </value>
            <value>
                <fullName>Foundation</fullName>
            </value>
            <value>
                <fullName>Permit</fullName>
            </value>
            <value>
                <fullName>HOA Issue</fullName>
            </value>
            <value>
                <fullName>Environmental/Hazardous Material</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>