force-app/main/default/objects/Turn__c/fields/Electric__c.field-meta.xml
<CustomField>
    <fullName>Electric__c</fullName>
    <label>Electric</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>City</fullName>
            </value>
            <value>
                <fullName>Solar</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>