force-app/main/default/objects/Turn__c/fields/Electric_Meter__c.field-meta.xml
<CustomField>
    <fullName>Electric_Meter__c</fullName>
    <label>Electric Meter #</label>
    <length>50</length>
    <type>Text</type>
</CustomField>