force-app/main/default/objects/Turn__c/fields/Electricity_Activated__c.field-meta.xml
<CustomField>
    <fullName>Electricity_Activated__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Electricity Activated</label>
    <type>Checkbox</type>
</CustomField>