force-app/main/default/objects/Turn__c/fields/Electricity_Provider__c.field-meta.xml
<CustomField>
    <fullName>Electricity_Provider__c</fullName>
    <label>Electricity Provider</label>
    <type>TextArea</type>
</CustomField>