force-app/main/default/objects/Turn__c/fields/External_Turn_WAF_Issued_Date__c.field-meta.xml
<CustomField>
    <fullName>External_Turn_WAF_Issued_Date__c</fullName>
    <label>External Turn WAF Issued Date</label>
    <type>Date</type>
</CustomField>