force-app/main/default/objects/Turn__c/fields/Final_Turn_Scope_Notes__c.field-meta.xml
<CustomField>
    <fullName>Final_Turn_Scope_Notes__c</fullName>
    <label>Final Turn Scope Notes</label>
    <type>TextArea</type>
</CustomField>