force-app/main/default/objects/Turn__c/fields/Flood_Zone__c.field-meta.xml
<CustomField>
    <fullName>Flood_Zone__c</fullName>
    <formula>Property_ID__r.Flood_Zone__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Flood Zone</label>
    <type>Text</type>
</CustomField>