force-app/main/default/objects/Turn__c/fields/Gas_Activated__c.field-meta.xml
<CustomField>
    <fullName>Gas_Activated__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Gas Activated</label>
    <type>Checkbox</type>
</CustomField>