force-app/main/default/objects/Turn__c/fields/Gas_Fuel_Tank__c.field-meta.xml
<CustomField>
    <fullName>Gas_Fuel_Tank__c</fullName>
    <label>Gas/Fuel Tank</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Not Applicable</fullName>
            </value>
            <value>
                <fullName>Natural Gas</fullName>
            </value>
            <value>
                <fullName>Fuel Oil Tank</fullName>
            </value>
            <value>
                <fullName>Propane Tank</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>