force-app/main/default/objects/Turn__c/fields/Gas_Provider__c.field-meta.xml
<CustomField>
    <fullName>Gas_Provider__c</fullName>
    <label>Gas Provider</label>
    <type>TextArea</type>
</CustomField>