force-app/main/default/objects/Turn__c/fields/Gas_Type__c.field-meta.xml
<CustomField>
    <fullName>Gas_Type__c</fullName>
    <inlineHelpText>This field indicates the heat source fuel type, as reported by the field teams.</inlineHelpText>
    <label>Gas Type</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Natural Gas</fullName>
            </value>
            <value>
                <fullName>Propane</fullName>
            </value>
            <value>
                <fullName>Oil</fullName>
            </value>
            <value>
                <fullName>Kerosene</fullName>
            </value>
            <value>
                <fullName>N/A</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>