force-app/main/default/objects/Turn__c/fields/Gate__c.field-meta.xml
<CustomField>
    <fullName>Gate__c</fullName>
    <label>Gate</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>