force-app/main/default/objects/Turn__c/fields/Gate_Comments__c.field-meta.xml
<CustomField>
    <fullName>Gate_Comments__c</fullName>
    <label>Gate Comments</label>
    <type>TextArea</type>
</CustomField>