force-app/main/default/objects/Turn__c/fields/GC_Email__c.field-meta.xml
<CustomField>
    <fullName>GC_Email__c</fullName>
    <label>GC Email</label>
    <type>Email</type>
</CustomField>