force-app/main/default/objects/Turn__c/fields/Heavy_Industry__c.field-meta.xml
<CustomField>
    <fullName>Heavy_Industry__c</fullName>
    <formula>Property_ID__r.Heavy_Industry__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Heavy Industry</label>
    <type>Checkbox</type>
</CustomField>