force-app/main/default/objects/Turn__c/fields/HOA_Name_UW__c.field-meta.xml
<CustomField>
    <fullName>HOA_Name_UW__c</fullName>
    <formula>Property_ID__r.Inspection_Record__r.HOA_Company__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>HOA Name @ UW</label>
    <type>Text</type>
</CustomField>