force-app/main/default/objects/Turn__c/fields/HOA_Y_N__c.field-meta.xml
<CustomField>
    <fullName>HOA_Y_N__c</fullName>
    <formula>Property_ID__r.HOA_Y_N__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>HOA (Y/N)</label>
    <type>Checkbox</type>
</CustomField>