force-app/main/default/objects/Turn__c/fields/Inspection_ID__c.field-meta.xml
<CustomField>
    <fullName>Inspection_ID__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Inspection ID</label>
    <referenceTo>Inspection__c</referenceTo>
    <relationshipLabel>Turns</relationshipLabel>
    <relationshipName>Turns</relationshipName>
    <type>Lookup</type>
</CustomField>