force-app/main/default/objects/Turn__c/fields/Inspection_Scheduled_Date__c.field-meta.xml
<CustomField>
    <fullName>Inspection_Scheduled_Date__c</fullName>
    <inlineHelpText>This field is used for Third Party Rehabs</inlineHelpText>
    <label>Inspection Scheduled Date</label>
    <type>Date</type>
</CustomField>