force-app/main/default/objects/Turn__c/fields/Insurance_Claim__c.field-meta.xml
<CustomField>
    <fullName>Insurance_Claim__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Insurance Claim</label>
    <type>Checkbox</type>
</CustomField>