force-app/main/default/objects/Turn__c/fields/Is_Property_All_Electric__c.field-meta.xml
<CustomField>
    <fullName>Is_Property_All_Electric__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>This field indicates if the property has no active gas lines, propane tanks, or oil tanks, as reported by the field teams.</inlineHelpText>
    <label>Is Property All Electric?</label>
    <type>Checkbox</type>
</CustomField>