force-app/main/default/objects/Turn__c/fields/Issue_Warranty_Change_Order__c.field-meta.xml
<CustomField>
    <fullName>Issue_Warranty_Change_Order__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Issue Warranty Change Order</label>
    <type>Checkbox</type>
</CustomField>