force-app/main/default/objects/Turn__c/fields/Lead_Based_Paint_Inspection_Required__c.field-meta.xml
<CustomField>
    <fullName>Lead_Based_Paint_Inspection_Required__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Lead Based Paint: Inspection Required</label>
    <type>Checkbox</type>
</CustomField>