force-app/main/default/objects/Turn__c/fields/Lead_Based_Paint_Notes__c.field-meta.xml
<CustomField>
    <fullName>Lead_Based_Paint_Notes__c</fullName>
    <label>Lead Based Paint: Notes</label>
    <type>TextArea</type>
</CustomField>