force-app/main/default/objects/Turn__c/fields/Lead_Based_Paint_Remediated__c.field-meta.xml
<CustomField>
    <fullName>Lead_Based_Paint_Remediated__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Lead Based Paint: Remediated</label>
    <type>Checkbox</type>
</CustomField>