force-app/main/default/objects/Turn__c/fields/Lease_Expiration_Date__c.field-meta.xml
<CustomField>
    <fullName>Lease_Expiration_Date__c</fullName>
    <formula>Property_ID__r.Lease_End_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Lease Expiration Date</label>
    <type>Date</type>
</CustomField>