force-app/main/default/objects/Turn__c/fields/Lockbox_Code__c.field-meta.xml
<CustomField>
    <fullName>Lockbox_Code__c</fullName>
    <label>Lockbox Code</label>
    <length>10</length>
    <type>Text</type>
</CustomField>