force-app/main/default/objects/Turn__c/fields/Loss_Type__c.field-meta.xml
<CustomField>
    <fullName>Loss_Type__c</fullName>
    <label>Loss Type</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Named Storm</fullName>
            </value>
            <value>
                <fullName>Wind</fullName>
            </value>
            <value>
                <fullName>Fire</fullName>
            </value>
            <value>
                <fullName>Flood</fullName>
            </value>
            <value>
                <fullName>Vandelism</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>