force-app/main/default/objects/Turn__c/fields/Lot_Sq_Ft__c.field-meta.xml
<CustomField>
    <fullName>Lot_Sq_Ft__c</fullName>
    <formula>Property_ID__r.Lot_Sq_Ft__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Lot Sq/Ft</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>