force-app/main/default/objects/Turn__c/fields/Missed_Items_by_GC_Turns__c.field-meta.xml
<CustomField>
    <fullName>Missed_Items_by_GC_Turns__c</fullName>
    <label>Missed Items by GC - Turns</label>
    <type>TextArea</type>
</CustomField>