force-app/main/default/objects/Turn__c/fields/Move_Out_Comments__c.field-meta.xml
<CustomField>
    <fullName>Move_Out_Comments__c</fullName>
    <label>Move Out Comments</label>
    <type>TextArea</type>
</CustomField>