force-app/main/default/objects/Turn__c/fields/Move_Out_Reason__c.field-meta.xml
<CustomField>
    <fullName>Move_Out_Reason__c</fullName>
    <label>Move Out Reason</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Eviction</fullName>
            </value>
            <value>
                <fullName>Lease Expired</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>