force-app/main/default/objects/Turn__c/fields/Named_Storm_Name__c.field-meta.xml
<CustomField>
    <fullName>Named_Storm_Name__c</fullName>
    <inlineHelpText>If Loss Type = Named Storm, please provide the name of the storm. Example: Hurricane Ida</inlineHelpText>
    <label>Named Storm Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>