force-app/main/default/objects/Turn__c/fields/New_Lockbox_Code__c.field-meta.xml
<CustomField>
    <fullName>New_Lockbox_Code__c</fullName>
    <formula>RIGHT(Name,4)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>New Lockbox Code</label>
    <type>Text</type>
</CustomField>