force-app/main/default/objects/Turn__c/fields/Notes_to_Marketing_Team__c.field-meta.xml
<CustomField>
    <fullName>Notes_to_Marketing_Team__c</fullName>
    <label>Notes to Marketing Team</label>
    <type>TextArea</type>
</CustomField>