force-app/main/default/objects/Turn__c/fields/Occupancy_Status__c.field-meta.xml
<CustomField>
    <fullName>Occupancy_Status__c</fullName>
    <formula>TEXT(Property_ID__r.Occupancy_Status__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Occupancy Status</label>
    <type>Text</type>
</CustomField>