force-app/main/default/objects/Turn__c/fields/Oil__c.field-meta.xml
<CustomField>
    <fullName>Oil__c</fullName>
    <label>Oil</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>