force-app/main/default/objects/Turn__c/fields/Oil_Category__c.field-meta.xml
<CustomField>
    <fullName>Oil_Category__c</fullName>
    <label>Oil Category</label>
    <length>255</length>
    <type>Text</type>
</CustomField>