force-app/main/default/objects/Turn__c/fields/Open_Permit_Notes__c.field-meta.xml
<CustomField>
    <fullName>Open_Permit_Notes__c</fullName>
    <label>Open Permit Notes</label>
    <type>TextArea</type>
</CustomField>