force-app/main/default/objects/Turn__c/fields/Open_Permit_Search_Complete__c.field-meta.xml
<CustomField>
    <fullName>Open_Permit_Search_Complete__c</fullName>
    <label>Open Permit Search Complete</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>