force-app/main/default/objects/Turn__c/fields/Pending_Cancel__c.field-meta.xml
<CustomField>
    <fullName>Pending_Cancel__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Pending Cancel</label>
    <type>Checkbox</type>
</CustomField>