force-app/main/default/objects/Turn__c/fields/Pending_Cancel_Cancelation_Reason__c.field-meta.xml
<CustomField>
    <fullName>Pending_Cancel_Cancelation_Reason__c</fullName>
    <label>Pending Cancel/Cancelation Reason</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>